fixed buttons visibility

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,36 @@
-body {
-    background-image: url('./images/background.avif');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+.container-fluid {
+  position: fixed;
+  top: 10px;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  max-width: 150px;
+  z-index: 9999;
+}
+
+#content-links-btn {
+  background-color: green;
+  border-color: green;
+}
+
+#donateBtn{
+  background-color: red;
+  border-color: red;
+}
+
+.fixed-btn {
+  max-height: 38px;
+  transition: opacity 0.3s ease;
+}
+
+/* When the screen width is 600px or smaller, change to horizontal layout */
+@media (max-width: 600px) {
+  .container-fluid {
+    flex-direction: row;
+    max-width: 100%;
   }
+
+  .container-fluid button {
+    margin-right: 5px; /* Add spacing between buttons */
+  }
+}
